@@ -1,8 +1,8 @@
 Package: netbenchmark
 Type: Package
 Title: Benchmarking of several gene network inference methods
-Version: 1.0.0
-Date: 2014-03-11
+Version: 1.0.1
+Date: 2015-08-08
 Author: Pau Bellot, Catharina Olsen, Patrick Meyer, with contributions
         from Alexandre Irrthum
 Maintainer: Pau Bellot <pau.bellot@upc.edu>
@@ -11,7 +11,7 @@ Contact: Pau Bellot <pau.bellot@upc.edu>, Patrick Meyer
 Description: This package implements a benchmarking of several gene
         network inference algorithms from gene expression data.
 License: CC BY-NC-SA 4.0
-URL: http://netbenchmark.geek-lab.org/
+URL: https://imatge.upc.edu/netbenchmark/
 Imports: Rcpp (>= 0.11.0), minet, randomForest, c3net, PCIT, GeneNet,
         tools, pracma
 LinkingTo: Rcpp
