@@ -2,14 +2,20 @@ GeneNet.wrap <- function(data){
     # method <- "static"
     # p <- 0.8
     ngenes <- dim(data)[2]
-    pcor <- ggm.estimate.pcor(data,method ="static",verbose=FALSE)
-    test.results <- ggm.test.edges(pcor,plot=FALSE,verbose=FALSE)
-    idx <- which(test.results$prob > 0.8)
-    net <- matrix(0,ngenes,ngenes)
-    colnames(net) <- colnames(data)
-    rownames(net) <- colnames(data)
-    for(i in seq_along(idx)){
-        net[test.results[i,2],test.results[i,3]] <- test.results[i,6]
+    pcor <- GeneNet::ggm.estimate.pcor(t(data),
+                                       method ="static",verbose=FALSE)
+    C <- fdrtool::fdrtool(corpcor::sm2vec(pcor),plot=FALSE,
+                          statistic="correlation",verbose=FALSE)$param
+    test.results <- GeneNet::network.test.edges(pcor,plot=FALSE,verbose=FALSE)
+    crop <- GeneNet::extract.network(test.results,cutoff.ggm=C[1,"cutoff"],
+                                     verbose=FALSE)
+    if(dim(crop)[1]==0){
+        d <- round(dim(test.results)[1]/10)
+        crop <- GeneNet::extract.network(test.results, 
+                                         method.ggm="number", cutoff.ggm=d,
+                                         verbose=FALSE)
     }
-    return(net);
+    aux <- GeneNet::network.make.graph(crop,node.labels = colnames(data))
+    net <- as(aux,"matrix")
+    return(net)
 }
