@@ -49,9 +49,8 @@
 }
 \examples{
     # Data
-    data <- runif(100)
-    dim(data) <- c(10,10)
+    data <- grndata::getData(datasource.name = "toy",FALSE)
     # Inference
-    net <- GeneNet.wrap(as.data.frame(data))
+    net <- GeneNet.wrap(data)
 }
 \keyword{ misc }
