@@ -42,9 +42,8 @@
 \code{\link{evaluate}}, \code{\link[minet]{clr}}}
 \examples{
     # Data
-    data <- runif(100)
-    dim(data) <- c(10,10)
+    data <- grndata::getData(datasource.name = "toy",FALSE)
     # Inference
-    net <- clr.wrap(as.data.frame(data))
+    net <- clr.wrap(data)
 }
 \keyword{ misc }
