@@ -42,9 +42,8 @@
 }
 \examples{
     # Data
-    data <- runif(100)
-    dim(data) <- c(10,10)
+    data <- grndata::getData(datasource.name = "toy",FALSE)
     # Inference
-    net <- mrnetb.wrap(as.data.frame(data))
+    net <- mrnetb.wrap(data)
 }
 \keyword{ misc }
