@@ -1,7 +1,13 @@
-- First version of the netbenchmark package
+netbenchmark_1.0.0
+    - First version of the netbenchmark package
     For a given list of network inference algorithms, \code{netbenchmark} 
     performs a benchmark between them. It makes use of four different big gene 
     datasources, it relies on a random subsampling of each one of the 
     datasource and noise addition in order to generate the datasets. 
     This package is licensed under a Creative Commons 
-    Attribution-NonCommercial-ShareAlike 3.0 Unported License.
+    Attribution-NonCommercial-ShareAlike 4.0 Unported License.
+netbenchmark_1.0.1
+    - Fixing errors in documentation
+    - Adding avaible datasources in documentation
+    - Fix GeneNet compatibility (1.2.13)
+    - New web
